removed paragraph indentation

--- a/Reglement/reglement.tex
+++ b/Reglement/reglement.tex
@@ -52,6 +52,8 @@
 
 \tableofcontents
 
+\setlength{\parindent}{0cm}
+
 \chapter*{Cahier des charges pour les postes}
 \addcontentsline{toc}{chapter}{Cahier des charges pour les postes}
 \section*{Comité}
