--- a/Statuts/statuts.tex
+++ b/Statuts/statuts.tex
@@ -52,6 +52,8 @@
 
 \tableofcontents
 
+\setlength{\parindent}{0cm}
+
 \chapter*{Dénomination et Siège}
 \addcontentsline{toc}{chapter}{Dénomination et Siège}
 
