some more page styling, with some content corrections

--- a/Reglement/reglement.tex
+++ b/Reglement/reglement.tex
@@ -51,28 +51,25 @@
 \end{titlepage}
 
 \tableofcontents
+\newpage
 
 \setlength{\parindent}{0cm}
 
-\chapter*{Cahier des charges pour les postes}
+\section*{Cahier des charges pour les postes}
 \addcontentsline{toc}{chapter}{Cahier des charges pour les postes}
-\section*{Comité}
+\subsection*{Comité}
 \addcontentsline{toc}{section}{Comité}
 
-\subsection*{Conseiller/ère juridique}
+\subsubsection*{Conseiller/ère juridique}
 Se renseigne et informe le Comité sur tous les aspects légaux des activités prévues ;
 
-\subsection*{IT}
+\subsubsection*{IT}
 Gère des ressources informatiques ;
 
-\subsection*{Président/e}
-\begin{itemize}
-\item conduite des Assemblées Générales et du Comité ;
-\item représentation légale de l’Association ;
-\item possède une carte d’accès au compte ;
-\end{itemize}
+\subsubsection*{Président/e}
+Possède une carte d’accès au compte postal ou bancaire ;
 
-\subsection*{Relations publiques}
+\subsubsection*{Relations publiques}
 \begin{itemize}
 \item gestion des comptes sur les réseaux sociaux ;
 \item recherche de contacts ;
@@ -80,27 +77,28 @@ Gère des ressources informatiques ;
 \item relation médias ;
 \end{itemize}
 
-\subsection*{Secrétaire}
+\subsubsection*{Secrétaire}
 \begin{itemize}
-\item prise des procès-verbaux des différentes assemblées ;
+\item prise des procès-verbaux des différentes assemblées et réunions du Comité ;
 \item gestion du courrier entrant et sortant ;
 \item convocation des membres aux différentes assemblées ;
 \item gestion des communications entre le Comité et les membres ;
 \item gestion des membres ;
 \end{itemize}
 
-\subsection*{Trésorier/ère}
+\subsubsection*{Trésorier/ère}
 \begin{itemize}
 \item gestion des comptes et établissement des rapports de comptes ;
 \item gestion des cotisations ;
 \item établissement des factures ;
 \item paiement des factures et défraiements ;
+\item possède une carte d’accès au compte postal ou bancaire ;
 \end{itemize}
-
-\section*{Autres fonctions}
+\newpage
+\subsection*{Autres fonctions}
 \addcontentsline{toc}{section}{Autres fonctions}
 
-\subsection*{Conférencier/ère}
+\subsubsection*{Conférencier/ère}
 \begin{itemize}
 \item validé par le Comité ;
 \item préparation des supports de conférence selon le template existant ;
@@ -110,33 +108,33 @@ Gère des ressources informatiques ;
 \item reçoit un accès personnel au dépôt des présentations et le gère de manière responsable ;
 \end{itemize}
 
-\subsection*{Membre actif}
+\subsubsection*{Membre actif}
 \begin{itemize}
 \item peut ajouter des articles sur le site (un système de validation est mis en place par le Comité) ;
 \item peut prétendre à être conférencier/ère ;
 \end{itemize}
 
-\chapter*{Règlement sur les frais}
+\section*{Règlement sur les frais}
 \addcontentsline{toc}{chapter}{Règlement sur les frais}
 
 Aucun défraiement ne sera fait durant la première année.
 
 Les notes de frais sont validées par le/a Président/e et le/a Trésorier/ère.
 
-\section*{Comité}
+\subsection*{Comité}
 \addcontentsline{toc}{section}{Comité}
 
 Les séances de comité ne donnent droit à aucun défraiement à l’exception des frais effectifs éventuels hors transports.
 
-\section*{Autres membres}
+\subsection*{Autres membres}
 \addcontentsline{toc}{section}{Autres membres}
 \begin{itemize}
 \item Le/a conférencier/ère reçoit un défraiement forfaitaire de 15CHF (quinze francs suisses) ;
 \item Les supports de présentation (projecteur, rallonges) sont fournis par l’Association ;
 \end{itemize}
 
-\chapter*{Autonomie financière}
+\section*{Autonomie financière}
 \addcontentsline{toc}{chapter}{Autonomie financière}
-Toute dépense hors budget au-delà de 100CHF (cent francs suisses) doit être validée par le Comité.
+Toute dépense hors budget au-delà de 100CHF (cent francs suisses) doit être validée par la majorité du Comité.
 
 \end{document}
