--- a/Statuts/statuts.tex
+++ b/Statuts/statuts.tex
@@ -179,7 +179,7 @@
 \begin{enumerate}
 \item L’Assemblée Générale est le pouvoir suprême de l’Association. Elle est composée de tous les membres.
 
-\item Elle se réunit une fois par an en session ordinaire. Elle peut, en outre, se réunir en session extraordinaire chaque fois que nécessaire à la demandedemande de la majorité du Comité ou des Membres Fondateurs ou d’un cinquième des membres actifs.
+\item Elle se réunit une fois par an en session ordinaire. Elle peut, en outre, se réunir en session extraordinaire chaque fois que nécessaire à la demande de la majorité du Comité ou des Membres Fondateurs ou d’un cinquième des membres actifs.
 
 \item L’Assemblée Générale est valablement constituée quel que soit le nombre de membres présents.
 
